--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,20 +1,27 @@
-<h1>Welcome to the Tech Blog</h1>
-<div>
-    <p>
-        Here you can see/create blog posts and comment on other ppl's posts
-    </p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center">Tech Blog</h1>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div class="row">
+    <div class="col">
+      <p></p>
+    </div>
+  </div>
+  {{#each posts as |post|}}
+  <div class="row">
+    <div class="col">
+      <div class="card mb-4">
+        <div class="card-body">
+          <h3 class="card-title"><a href="/post/{{post.id}}">{{post.name}}</a></h3>
+          <h5 class="card-text">{{post.description}}</h5>
+          <h5 class="card-text"><small class="text-muted">{{format_date post.date_created}}</small></h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  {{/each}}
 </div>
-{{#each posts as |post|}}
-    <div>
-        <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
-    </div>
-    <div>
-        <p>{{post.description}}</p>
-    </div>
-    <div>
-        <p>{{format_date post.date_created}}</p>
-    </div>
-    <div>
-        <p>----------------------------------</p>
-    </div>
-{{/each}}
