--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,34 +5,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <div >
-    <header>
-      <nav>
-        <a href="/">Homepage</a>
-        <a href="/dashboard">Dashboard</a>
-        {{#if logged_in}}
-        |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main>
-      {{{ body }}}
-    </main>
-    <footer>
-      
-    </footer>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <header>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">Homepage</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                  </li>
+                  {{#if logged_in}}
+                  <li class="nav-item">
+                    <button class="btn btn-link nav-link" id="logout">Logout</button>
+                  </li>
+                  {{else}}
+                  <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                  </li>
+                  {{/if}}
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-5">
+      <div class="col-lg-8">
+        <main>
+          {{{ body }}}
+        </main>
+      </div>
+    </div>
   </div>
-
-{{#if logged_in}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  {{#if logged_in}}
   <script src="/js/logout.js"></script>
-{{/if}}
+  {{/if}}
 </body>
 
 </html>
