--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,39 +1,41 @@
-<h2>Login</h2>
-
-<form class="login-form">
-  <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Login</h2>
+      <form class="login-form">
+        <div class="mb-3">
+          <label for="email-login" class="form-label">Email:</label>
+          <input type="text" class="form-control" id="email-login" />
+        </div>
+        <div class="mb-3">
+          <label for="password-login" class="form-label">Password:</label>
+          <input type="password" class="form-control" id="password-login" />
+        </div>
+        <div>
+          <button type="submit" class="btn btn-secondary">Login</button>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-6">
+      <h2>Signup</h2>
+      <form class="signup-form">
+        <div class="mb-3">
+          <label for="name-signup" class="form-label">Name:</label>
+          <input type="text" class="form-control" id="name-signup" />
+        </div>
+        <div class="mb-3">
+          <label for="email-signup" class="form-label">Email:</label>
+          <input type="text" class="form-control" id="email-signup" />
+        </div>
+        <div class="mb-3">
+          <label for="password-signup" class="form-label">Password:</label>
+          <input type="password" class="form-control" id="password-signup" />
+        </div>
+        <div>
+          <button type="submit" class="btn btn-secondary">Signup</button>
+        </div>
+      </form>
+    </div>
   </div>
-  <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
-</form>
-
-<div>
-  <h2>Signup</h2>
-
-  <form class="signup-form">
-    <div>
-      <label for="name-signup">name:</label>
-      <input type="text" id="name-signup" />
-    </div>
-    <div>
-      <label for="email-signup">email:</label>
-      <input type="text" id="email-signup" />
-    </div>
-    <div>
-      <label for="password-signup">password:</label>
-      <input type="password" id="password-signup" />
-    </div>
-    <div>
-      <button type="submit">signup</button>
-    </div>
-  </form>
 </div>
-
 <script src="./js/login.js"></script>
